--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <!--A tag with just a source attribute-->>
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+    <!--A tag with just an alt text, in addition to a source-->>
+    <img
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="the king of the forest"
+/>
+ <!--A tag with an alt and source attribute, as well as a title attribute-->>
+<img
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="the king of the forest"
+  title="lion"
+/>
   </body>
 </html>
